--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,14 +38,28 @@
         transparent 95%);
 }
 
-.mosaico {
-  display: flex
+/* .gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-rows: 100px;
+  grid-auto-flow: row dense;
+  grid-gap: 2px;
+} */
+
+.gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.mosaico:nth-child(1n) {
-  width: 30px
+.gallery img:nth-child(2n) {
+  grid-area: span 2 / span 3;
 }
 
-.mosaico:nth-child(1n + 1) {
-  width: 60px
+.gallery img:nth-child(5n) {
+  grid-area: span 5 / span 4;
+}
+
+.gallery img:nth-child(7n) {
+  grid-area: span 2 / span 2;
 }
