--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,13 +53,13 @@
 }
 
 .gallery img:nth-child(2n) {
-  grid-area: span 2 / span 3;
+  grid-area: span 2 / span 2;
 }
 
 .gallery img:nth-child(5n) {
-  grid-area: span 5 / span 4;
+  grid-area: span 3 / span 3;
 }
 
-.gallery img:nth-child(7n) {
-  grid-area: span 2 / span 2;
+#modal {
+  background-color: rgba(0, 0, 0, 0.5);
 }
